fix(ui): corrige un bug d'affichage dans les résultats

--- a/templates/fan_speed_check.tmpl
+++ b/templates/fan_speed_check.tmpl
@@ -1,3 +1,4 @@
+[{{ .host }}] Fans Speed:
 {{- $bad := list -}}
 {{- $max := index .vars "max_speed" }}
 {{- $psus := index .result "powerSupplies" }}
