--- a/templates/mlag_state_check.tmpl
+++ b/templates/mlag_state_check.tmpl
@@ -1,5 +1,6 @@
-{{- if eq .result.state .vars.expected_state -}}
+[{{ .host }}] MLAG State:
+{{- if eq .result.state .vars.expected_state }}
 OK
-{{- else -}}
+{{- else }}
 FAIL - MLAG is {{ .result.state }}
 {{- end }}
