--- a/templates/power_state_check.tmpl
+++ b/templates/power_state_check.tmpl
@@ -1,3 +1,4 @@
+[{{ .host }}] Power Supply State:
 {{- $bad := list -}}
 {{- $psus := index .result "powerSupplies" -}}
 {{- range $id, $ps := $psus }}
