--- a/templates/tempsensor_check.tmpl
+++ b/templates/tempsensor_check.tmpl
@@ -1,3 +1,4 @@
+[{{ .host }}] Temperature State:
 {{- $bad := list -}}
 {{- $psus := index .result "powerSupplies" }}
 {{- range $psuId, $ps := $psus }}
