--- a/templates/version_check.tmpl
+++ b/templates/version_check.tmpl
@@ -1,7 +1,8 @@
-{{- if eq (compareVersions .result.version .vars.min_version) 0 -}}
+[{{ .host }}] Version EOS: 
+{{- if eq (compareVersions .result.version .vars.min_version) 0 }}
 OK
-{{- else if eq (compareVersions .result.version .vars.min_version) 1 -}}
+{{- else if eq (compareVersions .result.version .vars.min_version) 1 }}
 OK
-{{- else -}}
+{{- else }}
 FAIL - Version is too old ({{ .result.version }})
 {{- end }}
