--- a/templates/ntp_check.tmpl
+++ b/templates/ntp_check.tmpl
@@ -1,20 +1,20 @@
-{{- $declared := index .vars "ntp_servers" }}
-{{- $seen := index (index .result "clockSource") "ntpServer" }}
-
+{{- $declared := index .vars "ntp_servers" -}}
+{{- $seen := index (index .result "clockSource") "ntpServer" -}}
 {{- $actualList := list -}}
-{{- if (kindIs "string" $seen) }}
-  {{- $actualList = list $seen }}
-{{- else if (kindIs "slice" $seen) }}
-  {{- $actualList = $seen }}
+[{{ .host }}] NTP Server:
+{{- if (kindIs "string" $seen) -}}
+  {{- $actualList = list $seen -}}
+{{- else if (kindIs "slice" $seen) -}}
+  {{- $actualList = $seen -}}
 {{- end }}
+{{ "" -}}
+Configured NTP servers:{{- range $i, $v := $declared }}{{ if $i }},{{ end }} {{ $v }}{{- end }}
+Seen NTP servers:{{- range $i, $v := $actualList }}{{ if $i }},{{ end }} {{ $v }}{{- end }}
 
-Configured NTP servers: {{ range $i, $v := $declared }}{{ if $i }}, {{ end }}{{ $v }}{{ end }}
-Seen NTP servers: {{ range $i, $v := $actualList }}{{ if $i }}, {{ end }}{{ $v }}{{ end }}
-
-{{- $missing := list -}}
-{{- range $i, $expected := $declared }}
+{{- $missing := list }}
+{{- range $expected := $declared }}
   {{- $found := false }}
-  {{- range $j, $actual := $actualList }}
+  {{- range $actual := $actualList }}
     {{- if eq (print $expected) (print $actual) }}
       {{- $found = true }}
     {{- end }}
@@ -27,5 +27,5 @@ Seen NTP servers: {{ range $i, $v := $actualList }}{{ if $i }}, {{ end }}{{ $v }
 {{- if eq (len $missing) 0 }}
 OK
 {{- else }}
-FAIL - Missing NTP server(s): {{ range $i, $v := $missing }}{{ if $i }}, {{ end }}{{ $v }}{{ end }}
+FAIL - Missing NTP server(s):{{- range $i, $v := $missing }}{{ if $i }},{{ end }} {{ $v }}{{- end }}
 {{- end }}
